Improve SPA link behaviour
* Article links should not cause app reload
* Used hostname prefix for locale (best practice)
* Additional localizations
* Improved copy

--- a/locales/de/messages.json
+++ b/locales/de/messages.json
@@ -1,4 +1,5 @@
 {
   "about_prototype": "Ein Prototyp-Recherchetool, das zeigt, wie Metadaten und automatisierte Analysen kombiniert werden können.",
+  "try_inspecting": "Sehen Sie sich die neuesten Nachrichtenartikel von <0>Google News</0> an",
   "url_prompt": "Geben Sie eine URL für den zu analysierenden Artikel ein"
 }
