Improve locale handling
* Refactored out locale control into isolated component.
* Reduced complexity in main index file.
* Now knows what locale is currently active when rendering server side - added _locale value to each message.json file.
* Improved API locale endpoint; locales are now only configured in one place!
* Added caching to locale files served via API.

--- a/locales/en/messages.json
+++ b/locales/en/messages.json
@@ -1,4 +1,5 @@
 {
+  "_locale": "en",
   "about_prototype": "A prototype research tool to demonstrate how metadata and automated analysis can be combined.",
   "try_inspecting": "Try inspecting recent news articles from <0>Google News</0>",
   "url_prompt": "Enter a news article URL to analyze"
