--- a/locales/de/messages.json
+++ b/locales/de/messages.json
@@ -1,6 +1,6 @@
 {
   "_locale": "de",
   "about_prototype": "Ein Prototyp-Recherchetool, das zeigt, wie Metadaten und automatisierte Analysen kombiniert werden können.",
-  "try_inspecting": "Sehen Sie sich die neuesten Nachrichtenartikel",
+  "try_analyzing": "Sehen Sie sich die neuesten Nachrichtenartikel",
   "url_prompt": "Geben Sie eine URL für den zu analysierenden Artikel ein"
 }
