--- a/locales/en/messages.json
+++ b/locales/en/messages.json
@@ -3,5 +3,5 @@
   "about_prototype": "A prototype research tool that combines article metadata and automated analysis",
   "inspect_article": "Inspect an article",
   "recent_articles": "Recent news articles",
-  "url_prompt": "Enter a news article URL to analyze"
+  "url_prompt": "Enter an article URL to analyze"
 }
